footer max width fixed + p wrap error solved

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -129,12 +129,14 @@
   align-self: center;
 }
 .footer {
+  margin: 0 auto;
+  padding: 2em;
   width: 100%;
+  max-width: var(--max-width);
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
-  padding: 2em;
   gap: 1em;
 }
 .list-column {
@@ -162,6 +164,7 @@
   flex-direction: column;
 }
 .info-wrapper{
+  scroll-margin-top: 5rem;
   margin: 0 auto;
   width: 80%;
   padding: 1em;
